--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: statnet.data
-Title: What the Package Does (One Line, Title Case)
+Title: Network Datasets for the Statnet Suite
 Version: 0.1-0
 Authors@R: 
     person(given = "Michal",
@@ -7,7 +7,10 @@ Authors@R:
            role = c("aut", "cre"),
            email = "michal2992@gmail.com",
            comment = c(ORCID = "0000-0001-7503-852X"))
-Description: What the package does (one paragraph).
+Description: Collection of network datasets used primarly in examples and tests
+  in other Statnet packages.
+URL: https://statnet.org
+BugReports: https://github.com/statnet/statnet.data/issues
 License: `use_mit_license()`, `use_gpl3_license()` or friends to
     pick a license
 Encoding: UTF-8
