--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: statnet.data
 Title: Network Datasets for the Statnet Suite
 Version: 0.1-0
+Date: 2021-11-23
 Authors@R: 
     c(
     person("Mark S.", "Handcock", role=c("aut"), email="handcock@stat.ucla.edu"),
